Tests/NegativeCompileTestsRunner/Configuration/TestRunnerConfiguration.swift
//
// Created by Andreas Bauer on 02.06.21.
//

import Foundation

typealias TestRunnerConfiguration = [ConfiguredNegativeCompileTestTarget]
